--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,8 @@ h6 {
   padding: 0;
   margin: 0;
 }
-ul {
+ul,
+ol {
   margin: 0;
   list-style-type: none;
   padding-left: 0;
@@ -35,131 +36,151 @@ img {
   max-width: 100%;
 }
 
-.about-us {
-  /* margin-top: -38px; */
-  /* padding: 0 20px; */
-  /* min-height: 775px; */
-}
 .container {
-  /* background-color: #fbfbfb; */
   min-width: 320px;
   max-width: 375px;
   padding: 0 20px;
   margin: 0 auto;
-  min-height: 675px;
-  position: relative;
+}
+.adv-list {
+  background-color: #1b414b;
+  border-radius: 24px;
+  padding: 80px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  margin-bottom: 20px;
 }
 
-.wrapp-text {
-  background-color: #fbfbfb;
-  padding: 40px 20px;
-  border-radius: 24px 24px 0 0;
-  position: relative;
+.adv-item {
 }
-
-.title {
+.num {
   font-weight: 500;
   font-size: 28px;
   line-height: 1;
-  letter-spacing: -0.02em;
-  color: #1b414b;
-  margin-bottom: 40px;
+  letter-spacing: -0.05em;
+  color: #fbfbfb;
+  margin-bottom: 18px;
+  padding-bottom: 18px;
+  position: relative;
 }
-.subtitle {
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1;
-  letter-spacing: -0.02em;
-  color: #1b414b;
-  margin-bottom: 20px;
+
+.num::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: rgba(251, 251, 251, 0.1);
 }
+
 .text {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: -0.02em;
-  color: #040306;
-  opacity: 0.4;
+  color: #fbfbfb;
+  opacity: 0.8;
 }
 
-.img-about-us {
-  /* position: absolute;
-  bottom: -100px;
-  left: 0; */
-  border-radius: 24px;
-  height: 395px;
-  position: absolute;
-  top: 0;
+.adv-item:nth-of-type(1) .text {
+  max-width: 238px;
 }
 
-.test {
-  background-color: #fbfbfb;
-  height: 20px;
+.adv-item:nth-of-type(2) .text {
+  max-width: 199px;
+}
+.adv-item:nth-of-type(3) .text,
+.adv-item:nth-of-type(4) .text {
+  max-width: 292px;
 }
 
 .wrapp-img {
-  /* height: 395px; */
-  position: relative;
-  margin-top: -1px;
-
-  /* overflow: hidden; */
+}
+.img-yach {
+  border-radius: 24px;
+  min-height: 424px;
 }
 
 @media screen and (min-width: 768px) {
-  .about-us {
-    min-height: 951px;
-  }
   .container {
     max-width: 768px;
     padding: 0 32px;
   }
 
-  .wrapp-text {
-    padding: 50px 0 50px 32px;
+  .adv-list {
+    padding: 90px 32px;
+    flex-direction: row;
+    gap: 0 32px;
+    flex-wrap: wrap;
   }
 
-  .title {
-    font-size: 48px;
-    max-width: 536px;
-    margin-bottom: 50px;
+  .adv-item {
+    flex-basis: calc((100% - 32px) / 2);
   }
 
-  .subtitle {
-    font-size: 23px;
-    max-width: 389px;
+  .adv-list .adv-item:nth-child(1) {
+    margin-bottom: 44px;
+  }
+
+  .adv-list .adv-item:nth-child(2) {
+    margin-bottom: 59px;
+  }
+
+  .num {
+    font-size: 32px;
   }
 
   .text {
     font-size: 13px;
     line-height: 1.15;
-    max-width: 385px;
   }
 
-  .img-about-us {
-    height: 470px;
+  .adv-item:nth-of-type(2) .text {
+    max-width: 216px;
+  }
+
+  .img-yach {
+    width: 100%;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .container {
     max-width: 1280px;
+    padding: 0 50px;
   }
 
-  .wrapp-text {
-    padding: 50px 50px 100px;
+  .section-adv .container {
     display: flex;
+    flex-direction: row;
+    gap: 32px;
+  }
+
+  .adv-list {
+    padding: 90px 50px;
+    gap: 0;
     justify-content: space-between;
+    margin-bottom: 0;
+  }
+  .num::before {
+    max-width: 280px;
   }
 
-  .wrapp-subtitle {
+  .adv-list .adv-item {
+    max-width: 292px;
   }
 
-  .subtitle,
-  .text {
-    max-width: 354px;
+  .adv-list .adv-item:nth-child(1) {
+    max-width: 280px;
   }
 
-  .img-about-us {
-    width: 100%;
+  .wrapp-img {
+    flex-shrink: 0;
+  }
+
+  .img-yach {
+    width: 432px;
   }
 }
